--- a/_posts/2012-05-20-a-note-on-sexism.textile
+++ b/_posts/2012-05-20-a-note-on-sexism.textile
@@ -10,4 +10,4 @@ Apparently, Uncle Bob had a slide that said "C was for real men" and, when a fem
 
 Take the counter example: What if a speaker had a slide that depicts a (half-)naked woman in front of a computer and the speaker commented the slide with "As you all know, I *totally* respect female computer scientists". In this case, the words by themselves indicate respect for female computer scientists – but everything else does not.
 
-Context is key and one needs some situational awareness before shouting "You sexist!". *Inclusive language, as is so often propagated, is bogus – we need an inclusive mindset and inclusive behavior.* What value is there in someone who thinks and acts like he were pro equal rights but silently envies his father's generation because they'd managed to keep women in the kitchen? I'd say none. And neither is there value in hardcore pseudo-feminism that sees sexism lurking on every corner. If our goal is equal rights and less sexism, it makes no sense to point our fingers at everything that could remotely be seen as sexism – especially when there's strong indication that it's not – and focus on the real problem instead: *We need to get this mindset out of or generation of men and women – no matter how old they are, where they're from or what industry they're working in.*
+Context is key and one needs some situational awareness before shouting "You sexist!". *Inclusive language, that so many people propagate, is bogus – we need an inclusive mindset and inclusive behavior.* What value is there in someone who thinks and acts like he were pro equal rights but silently envies his father's generation because they'd managed to keep women in the kitchen? I'd say none. And neither is there value in hardcore pseudo-feminism that sees sexism lurking on every corner. If our goal is equal rights and less sexism, it makes no sense to point our fingers at everything that could remotely be seen as sexism – especially when there's strong indication that it's not – and focus on the real problem instead: *We need to get this mindset out of or generation of men and women – no matter how old they are, where they're from or what industry they're working in.*
