--- a/rates.textile
+++ b/rates.textile
@@ -9,23 +9,29 @@ title: Rates
 
     <div class="content">
       <p>
-        Most freelancers and agencies won't tell you their rates on their websites – mostly because they like to adjust their rates depending on how they estimate you as a client. I do tell you, because I like transparency and honesty, because *I treat all customers equally and because I'm confident that my rates match my level of experience*.
+        Most freelancers and agencies won't tell you their rates on their websites –
+        mostly because they like to adjust their rates depending on how they estimate you as a client.
+        I do tell you, because I like transparency and honesty, because *I treat all customers equally and because I'm confident that my rates match my level of experience*.
       </p>
 
       <h3>Standard rate</h3>
 
       <p>
-        My current standard rate is *80 EUR/hour*. We can arrange for daily rates for on-site work or bigger/long term projects.
+        My current standard rate is *99 EUR/hour*.
+        We can arrange for daily rates for on-site work or bigger/long term projects.
       </p>
 
       <p>
-        This rate applies for consulting as well as for development and *doesn't include VAT/sales tax* (if applicable). Oh, and sorry: I don't accept foreign currencies – *Euros only*!
+        This rate applies for consulting as well as for development and *doesn't include VAT/sales tax* (if applicable).
+        Oh, and sorry: I don't accept foreign currencies – *Euros only*!
       </p>
 
       <h3>Discounted rates</h3>
 
       <p>
-        If you want me to work on a project *regularly over a longer period* of time, we might negotiate a discounted rate. Discounts for *things that interest me personally* (say, technically challenging or working in a city/country I really want to visit) might be possible, too. I have worked for lower rates for *non profit organizations* in the past and I am definitely willing to do it again.
+        If you want me to work on a project *regularly over a longer period* of time, we might negotiate a discounted rate.
+        Discounts for *things that interest me personally* (say, technically challenging or working in a city/country I really want to visit) might be possible, too.
+        I have worked for lower-than-standard rates for *non profit organizations* in the past and I am definitely willing to do it again.
       </p>
 
       <p>
@@ -35,25 +41,45 @@ title: Rates
       <h3>Fixed-bid projects</h3>
 
       <p>
-        I usually don't go for fixed-bid projects because, frankly, somebody (either you or I or – worst case – both) is always going to be unhappy in the end. *I can work with a fixed budget*, though. I'll do my best to give a proper estimate whether or not I think that your project is doable with the given budget and we'll write specifications for the things you need. If your requirements change (and they probably will!) we can react to that by replacing outdated requirements with new ones. I'll always advise you as good as I can and definitely give notice if I think we might be running out of budget.
+        I usually don't go for fixed-bid projects because, frankly, somebody (either you or I or – worst case – both) is always going to be unhappy in the end.
+        *I can work with a fixed budget*, though.
+        I'll do my best to give a proper estimate whether or not I think that your project is doable with the given budget and we'll write specifications for the things you need.
+        If your requirements change (and they probably will!) we can react to that by replacing outdated requirements with new ones.
+        I'll always advise you as good as I can and definitely give notice if I think we might be running out of budget.
       </p>
 
       <h3>Profit sharing</h3>
 
       <p>
-        I don't work based on pure profit sharing. If I think your project has potential, we might discuss options where you *hire me for a reduced rate in exchange for sharing some profits* later.
+        I don't work based on pure profit sharing.
+        If I think your project has potential, we might discuss options where you *hire me for a reduced rate in exchange for sharing some profits* later.
       </p>
 
       <h3>On-site work</h3>
 
       <p>
-        If you want me to work on-site, you will have to *cover at least part of my travel and accommodation expenses*. I'm not picky, though: I need a clean single room with a bed, a shower and free (preferably unlimited) internet access – nothing fancy. By Central European standards, an average 2 star hotel, a good hostel or a guest room of an employee will do just fine.
+        If you want me to work on-site, you will have to *cover at least part of my travel and accommodation expenses*.
+        I'm not picky, though: I need a clean single room with a bed, a shower and free (preferably unlimited) internet access – nothing fancy.
+        By Central European standards, an average 2 star hotel, a good hostel or a guest room of an employee will do just fine.
       </p>
 
-      <h3>Down payment</h3>
+      <h3>Longer and/or bigger projects = payment in advance</h3>
 
       <p>
-        If you want to book me for a longer period and/or some time in advance, please note that I might consider negotiating a down payment with you. This is simply because I'll have to refuse other potential projects – if you then postpone the project last-minute that would seriously impact my cash flow. Don't worry, though: *I'm sure we can make arrangements that will be okay for you and me.*
+        If you want to book me for longer periods and/or bigger fixed chunks (3+ days per week) and/or some time in advance,
+        please note that I will most likely regularly charge you in advance for at least part of the next planned chunk of work.
+        There are two reasons for payment in advance:
+        <ol>
+          <li>I'll have to refuse other potential projects – if you then postpone the project last-minute or cancel it that would seriously impact my cash flow.</li>
+          <li>I've had experiences in the past where I've lost solid five figures because the client took more than they could afford and only told me after the fact. Payment in advance ensures that either party can sleep well.</li>
+        </ol>
+        Don't worry, though: *I'm sure we can make arrangements that will be beneficial for you and me.*
+      </p>
+
+      <p>
+        Example: Assume you want to hire me for 3 days per week for 4 weeks and we've agreed that my standard hourly rate is OK for you.
+        I would then – after checking with you – send an invoice for 8,316 Euros (= 7 hours per day x 3 days per week x 4 weeks => 84 hours x 99 Euros per hour).
+        After those 4 weeks we'll look at my timesheet and check if I've worked more or less than initially agreed and I'll write another invoice or credit note accordingly or include the difference in the next invoice.
       </p>
     </div>
   </div>
