--- a/rates.textile
+++ b/rates.textile
@@ -17,8 +17,7 @@ title: Rates
       <h3>Standard rate</h3>
 
       <p>
-        My current standard rate is *99 EUR/hour*.
-        We can arrange for daily rates for on-site work or bigger/long term projects.
+        My current standard rate is *150 EUR/hour* or *1,000 EUR/day*.
       </p>
 
       <p>
@@ -77,8 +76,8 @@ title: Rates
       </p>
 
       <p>
-        Example: Assume you want to hire me for 3 days per week for 4 weeks and we've agreed that my standard hourly rate is OK for you.
-        I would then – after checking with you – send an invoice for 8,316 Euros (= 7 hours per day x 3 days per week x 4 weeks => 84 hours x 99 Euros per hour).
+        Example: Assume you want to hire me for 3 days per week for 4 weeks and we've agreed that my standard daily rate is OK for you.
+        I would then – after checking with you – send an invoice for 12,000 Euros (= 3 days per week x 4 weeks => 12 days x 1,000 Euros per hour).
         After those 4 weeks we'll look at my timesheet and check if I've worked more or less than initially agreed and I'll write another invoice or credit note accordingly or include the difference in the next invoice.
       </p>
     </div>
